[package]
name = "raymarch"
version = "0.1.0"
authors = ["Martin Tomasi <martin.tomasi@gmail.com>"]
edition = "2021"

[dependencies]
nalgebra = { version = "0.29.0", features = ["serde-serialize"] }
image = "0.23.14"
rand = "0.8.4"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
color-eyre = "0.5.11"
